Fix issue with expanded result overlay on mobile

--- a/public/stylesheets/results.scss
+++ b/public/stylesheets/results.scss
@@ -455,9 +455,11 @@
 
   }
 
-  .result.expanded {
-    height: auto;
+  .result.expanded, .result.expanded.selected {
     width: 100%;
+    height: 100%;
+    box-shadow: none;
+    top: 0;
     left: 0;
     right: 0;
     bottom: 0;
@@ -465,6 +467,7 @@
     position: fixed;
     background-color: $lightest;
     overflow: auto;
+
     .address, .thumbs, .description, .icon-title, .hours-title {
       display: block;
     }
